@@ -112,8 +112,8 @@ namespace
 }
 
 template<>
-custom_error_base<auth_conv_tty::error_code>::map_type
-custom_error_base<auth_conv_tty::error_code>::error_strings
+error<auth_conv_tty::error_code>::map_type
+error<auth_conv_tty::error_code>::error_strings
 (init_errors,
  init_errors + (sizeof(init_errors) / sizeof(init_errors[0])));
 
