@@ -22,121 +22,18 @@
 
 #include <sbuild/sbuild-error.h>
 
-#include <map>
-#include <string>
-
 namespace sbuild
 {
-
-  /**
-   * Custom error base.
-   */
-  template <typename T>
-  class custom_error_base : public runtime_error
-  {
-  public:
-    typedef T error_type;
-    typedef std::map<error_type,const char *> map_type;
-
-    /**
-     * The constructor.
-     *
-     * @param error the error message.
-     */
-    custom_error_base(std::string const& error):
-      runtime_error(error)
-    {
-    }
-
-    /// The destructor.
-    virtual ~custom_error_base () throw ()
-    {}
-
-    /**
-     * Null class to represent an absence of context or detail in an
-     * error.
-     */
-    class null
-    {
-      /**
-       * null output to an ostream.
-       * @todo Output placeholder text.
-       */
-      template <class charT, class traits>
-      friend
-      std::basic_ostream<charT,traits>&
-      operator << (std::basic_ostream<charT,traits>& stream,
-		   null const&                       n)
-      {
-	return stream;
-      }
-    };
-
-  private:
-    /// Mapping between error code and string.
-    static map_type error_strings;
-
-    /**
-     * Get a translated error string.
-     *
-     * @param error the error code.
-     * @returns a translated error string.
-     */
-    static const char *
-    get_error (error_type error);
-
-  protected:
-    /**
-     * Format an error message.
-     *
-     * @param context1 context of the error.
-     * @param context2 additional context of the error.
-     * @param context3 additional context of the error.
-     * @param error the error code.
-     * @param detail1 details of the error.
-     * @param detail2 additional details of the error.
-     * @returns a translated error message.
-     */
-    template <typename A, typename B, typename C, typename D, typename E>
-    static std::string
-    format_error (A const&   context1,
-		  B const&   context2,
-		  C const&   context3,
-		  error_type error,
-		  D const&   detail1,
-		  E const&   detail2);
-
-    /**
-     * Format an error message.
-     *
-     * @param context1 context of the error.
-     * @param context2 additional context of the error.
-     * @param context3 additional context of the error.
-     * @param error the error code.
-     * @param detail1 details of the error.
-     * @param detail2 additional details of the error.
-     * @returns a translated error message.
-     */
-    template <typename A, typename B, typename C, typename D, typename E>
-    static std::string
-    format_error (A const&                  context1,
-		  B const&                  context2,
-		  C const&                  context3,
-		  std::runtime_error const& error,
-		  D const&                  detail1,
-		  E const&                  detail2);
-
-  };
 
   /**
    * Custom error.
    */
   template <typename T>
-  class custom_error : public custom_error_base<T>
+  class custom_error : public error<T>
   {
   public:
-    typedef typename custom_error_base<T>::error_type error_type;
-    typedef typename custom_error_base<T>::null null;
+    typedef typename error<T>::error_type error_type;
+    typedef typename error<T>::null null;
 
     /**
      * The constructor.
@@ -144,7 +41,7 @@ namespace sbuild
      * @param error the error code.
      */
     custom_error (error_type error):
-      custom_error_base<T>(format_error(null(), null(), null(), error, null(), null()))
+      sbuild::error<T>(format_error(null(), null(), null(), error, null(), null()))
     {
     }
 
@@ -156,7 +53,7 @@ namespace sbuild
      */
     custom_error (std::string const& detail,
 		  error_type error):
-      custom_error_base<T>(format_error(detail, null(), null(), error, null(), null()))
+      sbuild::error<T>(format_error(detail, null(), null(), error, null(), null()))
     {
     }
 
@@ -168,7 +65,7 @@ namespace sbuild
      */
     custom_error (error_type         error,
 		  std::string const& error_string):
-      custom_error_base<T>(format_error(null(), null(), null(), error, error_string, null()))
+      sbuild::error<T>(format_error(null(), null(), null(), error, error_string, null()))
     {
     }
 
@@ -182,7 +79,7 @@ namespace sbuild
     custom_error (std::string const& detail,
 		  error_type         error,
 		  std::string const& error_string):
-      custom_error_base<T>(format_error(detail, null(), null(), error, error_string, null()))
+      sbuild::error<T>(format_error(detail, null(), null(), error, error_string, null()))
     {
     }
 
@@ -193,7 +90,7 @@ namespace sbuild
      * @param error the error code.
      */
     custom_error (std::runtime_error const& error):
-      custom_error_base<T>(format_error(null(), null(), null(), error, null(), null()))
+      sbuild::error<T>(format_error(null(), null(), null(), error, null(), null()))
     {
     }
 
@@ -205,7 +102,7 @@ namespace sbuild
      */
     custom_error (std::string const&        detail,
 		  std::runtime_error const& error):
-      custom_error_base<T>(format_error(detail, null(), null(), error, null(), null()))
+      sbuild::error<T>(format_error(detail, null(), null(), error, null(), null()))
     {
     }
 
@@ -215,8 +112,6 @@ namespace sbuild
   };
 
 }
-
-#include "sbuild-custom-error.tcc"
 
 #endif /* SBUILD_CUSTOM_ERROR_H */
 
