@@ -44,8 +44,8 @@ namespace
 }
 
 template<>
-custom_error_base<dirstream::error_code>::map_type
-custom_error_base<dirstream::error_code>::error_strings
+error<dirstream::error_code>::map_type
+error<dirstream::error_code>::error_strings
 (init_errors,
  init_errors + (sizeof(init_errors) / sizeof(init_errors[0])));
 
