@@ -28,12 +28,12 @@
 template <typename T>
 template <typename A, typename B, typename C, typename D, typename E>
 inline std::string
-sbuild::custom_error_base<T>::format_error (A const&   context1,
-					    B const&   context2,
-					    C const&   context3,
-					    error_type error,
-					    D const&   detail1,
-					    E const&   detail2)
+sbuild::error<T>::format_error (A const&   context1,
+				B const&   context2,
+				C const&   context3,
+				error_type error,
+				D const&   detail1,
+				E const&   detail2)
 {
   std::string format;
   std::string msg(get_error(error));
@@ -115,12 +115,12 @@ sbuild::custom_error_base<T>::format_error (A const&   context1,
 template <typename T>
 template <typename A, typename B, typename C, typename D, typename E>
 inline std::string
-sbuild::custom_error_base<T>::format_error (A const&   context1,
-					    B const&   context2,
-					    C const&   context3,
-					    std::runtime_error const& error,
-					    D const&   detail1,
-					    E const&   detail2)
+sbuild::error<T>::format_error (A const&   context1,
+				B const&   context2,
+				C const&   context3,
+				std::runtime_error const& error,
+				D const&   detail1,
+				E const&   detail2)
 {
   std::string format;
   std::string msg(error.what());
@@ -182,7 +182,7 @@ sbuild::custom_error_base<T>::format_error (A const&   context1,
 
 template <typename T>
 const char *
-sbuild::custom_error_base<T>::get_error (error_type error)
+sbuild::error<T>::get_error (error_type error)
 {
   typename map_type::const_iterator pos = error_strings.find(error);
 
