@@ -56,8 +56,8 @@ namespace
 }
 
 template<>
-custom_error_base<keyfile::error_code>::map_type
-custom_error_base<keyfile::error_code>::error_strings
+error<keyfile::error_code>::map_type
+error<keyfile::error_code>::error_strings
 (init_errors,
  init_errors + (sizeof(init_errors) / sizeof(init_errors[0])));
 
