@@ -40,8 +40,8 @@ namespace
 }
 
 template<>
-custom_error_base<parse_value_error_code>::map_type
-custom_error_base<parse_value_error_code>::error_strings
+error<parse_value_error_code>::map_type
+error<parse_value_error_code>::error_strings
 (init_errors,
  init_errors + (sizeof(init_errors) / sizeof(init_errors[0])));
 
